@@ -591,7 +591,6 @@ typedef enum user_options_defaults
   BRAIN_SESSION            = 0,
   #endif
   DEBUG_MODE               = 0,
-  EXAMPLE_HASHES           = false,
   FORCE                    = false,
   HWMON_DISABLE            = false,
   HWMON_TEMP_ABORT         = 90,
@@ -697,11 +696,10 @@ typedef enum user_options_map
   IDX_DEBUG_MODE                = 0xff11,
   IDX_ENCODING_FROM             = 0xff12,
   IDX_ENCODING_TO               = 0xff13,
-  IDX_EXAMPLE_HASHES            = 0xff14,
+  IDX_HASH_INFO                 = 0xff14,
   IDX_FORCE                     = 0xff15,
   IDX_HWMON_DISABLE             = 0xff16,
   IDX_HWMON_TEMP_ABORT          = 0xff17,
-  IDX_HASH_INFO                 = 0xff4d, // must be changed before merging
   IDX_HASH_MODE                 = 'm',
   IDX_HCCAPX_MESSAGE_PAIR       = 0xff18,
   IDX_HELP                      = 'h',
@@ -1940,7 +1938,6 @@ typedef struct user_options
   bool         brain_client;
   bool         brain_server;
   #endif
-  bool         example_hashes;
   bool         force;
   bool         hwmon_disable;
   bool         hash_info;
