@@ -904,9 +904,6 @@ int hashes_init_stage1 (hashcat_ctx_t *hashcat_ctx)
   else if (user_options->hash_info == true)
   {
   }
-  else if (user_options->example_hashes == true)
-  {
-  }
   else if (user_options->keyspace == true)
   {
   }
