@@ -2226,7 +2226,6 @@ int hwmon_ctx_init (hashcat_ctx_t *hashcat_ctx)
   #endif // WITH_HWMON
 
   if (user_options->hash_info       == true) return 0;
-  if (user_options->example_hashes  == true) return 0;
   if (user_options->keyspace        == true) return 0;
   if (user_options->left            == true) return 0;
   if (user_options->backend_info    == true) return 0;
