@@ -361,7 +361,6 @@ int outcheck_ctx_init (hashcat_ctx_t *hashcat_ctx)
   if (user_options->keyspace       == true) return 0;
   if (user_options->benchmark      == true) return 0;
   if (user_options->hash_info      == true) return 0;
-  if (user_options->example_hashes == true) return 0;
   if (user_options->speed_only     == true) return 0;
   if (user_options->progress_only  == true) return 0;
   if (user_options->backend_info   == true) return 0;
