@@ -112,7 +112,6 @@ int potfile_init (hashcat_ctx_t *hashcat_ctx)
 
   if (user_options->benchmark       == true) return 0;
   if (user_options->hash_info       == true) return 0;
-  if (user_options->example_hashes  == true) return 0;
   if (user_options->keyspace        == true) return 0;
   if (user_options->backend_info    == true) return 0;
   if (user_options->stdout_flag     == true) return 0;
