@@ -262,7 +262,6 @@ int straight_ctx_init (hashcat_ctx_t *hashcat_ctx)
   straight_ctx->enabled = false;
 
   if (user_options->hash_info      == true) return 0;
-  if (user_options->example_hashes == true) return 0;
   if (user_options->left           == true) return 0;
   if (user_options->backend_info   == true) return 0;
   if (user_options->show           == true) return 0;
