@@ -660,133 +660,6 @@ void hash_info (hashcat_ctx_t *hashcat_ctx)
   }
 }
 
-void example_hashes (hashcat_ctx_t *hashcat_ctx)
-{
-  folder_config_t *folder_config = hashcat_ctx->folder_config;
-  user_options_t  *user_options  = hashcat_ctx->user_options;
-
-  if (user_options->hash_mode_chgd == true)
-  {
-    if (hashconfig_init (hashcat_ctx) == 0)
-    {
-      hashconfig_t *hashconfig = hashcat_ctx->hashconfig;
-
-      event_log_info (hashcat_ctx, "MODE: %u", hashconfig->hash_mode);
-      event_log_info (hashcat_ctx, "TYPE: %s", hashconfig->hash_name);
-
-      if ((hashconfig->st_hash != NULL) && (hashconfig->st_pass != NULL))
-      {
-        if (hashconfig->opts_type & OPTS_TYPE_BINARY_HASHFILE)
-        {
-          event_log_info (hashcat_ctx, "HASH (hex-encoded): %s", hashconfig->st_hash);
-        }
-        else
-        {
-          event_log_info (hashcat_ctx, "HASH: %s", hashconfig->st_hash);
-        }
-
-        if (need_hexify ((const u8 *) hashconfig->st_pass, strlen (hashconfig->st_pass), user_options->separator, false))
-        {
-          char tmp_buf[HCBUFSIZ_LARGE] = { 0 };
-
-          int tmp_len = 0;
-
-          tmp_buf[tmp_len++] = '$';
-          tmp_buf[tmp_len++] = 'H';
-          tmp_buf[tmp_len++] = 'E';
-          tmp_buf[tmp_len++] = 'X';
-          tmp_buf[tmp_len++] = '[';
-
-          exec_hexify ((const u8 *) hashconfig->st_pass, strlen (hashconfig->st_pass), (u8 *) tmp_buf + tmp_len);
-
-          tmp_len += strlen (hashconfig->st_pass) * 2;
-
-          tmp_buf[tmp_len++] = ']';
-          tmp_buf[tmp_len++] = 0;
-
-          event_log_info (hashcat_ctx, "PASS: %s", tmp_buf);
-        }
-        else
-        {
-          event_log_info (hashcat_ctx, "PASS: %s", hashconfig->st_pass);
-        }
-      }
-      else
-      {
-        event_log_info (hashcat_ctx, "HASH: not stored");
-        event_log_info (hashcat_ctx, "PASS: not stored");
-      }
-
-      event_log_info (hashcat_ctx, NULL);
-    }
-
-    hashconfig_destroy (hashcat_ctx);
-  }
-  else
-  {
-    char *modulefile = (char *) hcmalloc (HCBUFSIZ_TINY);
-
-    for (int i = 0; i < MODULE_HASH_MODES_MAXIMUM; i++)
-    {
-      user_options->hash_mode = i;
-
-      module_filename (folder_config, i, modulefile, HCBUFSIZ_TINY);
-
-      if (hc_path_exist (modulefile) == false) continue;
-
-      if (hashconfig_init (hashcat_ctx) == 0)
-      {
-        hashconfig_t *hashconfig = hashcat_ctx->hashconfig;
-
-        event_log_info (hashcat_ctx, "MODE: %u", hashconfig->hash_mode);
-        event_log_info (hashcat_ctx, "TYPE: %s", hashconfig->hash_name);
-
-        if ((hashconfig->st_hash != NULL) && (hashconfig->st_pass != NULL))
-        {
-          event_log_info (hashcat_ctx, "HASH: %s", hashconfig->st_hash);
-
-          if (need_hexify ((const u8 *) hashconfig->st_pass, strlen (hashconfig->st_pass), user_options->separator, false))
-          {
-            char tmp_buf[HCBUFSIZ_LARGE] = { 0 };
-
-            int tmp_len = 0;
-
-            tmp_buf[tmp_len++] = '$';
-            tmp_buf[tmp_len++] = 'H';
-            tmp_buf[tmp_len++] = 'E';
-            tmp_buf[tmp_len++] = 'X';
-            tmp_buf[tmp_len++] = '[';
-
-            exec_hexify ((const u8 *) hashconfig->st_pass, strlen (hashconfig->st_pass), (u8 *) tmp_buf + tmp_len);
-
-            tmp_len += strlen (hashconfig->st_pass) * 2;
-
-            tmp_buf[tmp_len++] = ']';
-            tmp_buf[tmp_len++] = 0;
-
-            event_log_info (hashcat_ctx, "PASS: %s", tmp_buf);
-          }
-          else
-          {
-            event_log_info (hashcat_ctx, "PASS: %s", hashconfig->st_pass);
-          }
-        }
-        else
-        {
-          event_log_info (hashcat_ctx, "HASH: not stored");
-          event_log_info (hashcat_ctx, "PASS: not stored");
-        }
-
-        event_log_info (hashcat_ctx, NULL);
-      }
-
-      hashconfig_destroy (hashcat_ctx);
-    }
-
-    hcfree (modulefile);
-  }
-}
-
 void backend_info (hashcat_ctx_t *hashcat_ctx)
 {
   const backend_ctx_t *backend_ctx = hashcat_ctx->backend_ctx;
