@@ -90,7 +90,7 @@ static const char *const USAGE_BIG_PRE_HASHMODES[] =
   "     --cpu-affinity             | Str  | Locks to CPU devices, separated with commas          | --cpu-affinity=1,2,3",
   "     --hook-threads             | Num  | Sets number of threads for a hook (per compute unit) | --hook-threads=8",
   "     --hash-info                |      | Show information for each hash-mode                  |",
-  "     --example-hashes           |      | Show an example hash for each hash-mode              |",
+  "     --example-hashes           |      | Alias of --hash-info                                 |",
   "     --backend-ignore-cuda      |      | Do not try to open CUDA interface on startup         |",
   "     --backend-ignore-opencl    |      | Do not try to open OpenCL interface on startup       |",
   " -I, --backend-info             |      | Show info about detected backend API devices         | -I",
