@@ -19,7 +19,8 @@
 ## Features
 ##
 
-- Added option --hash-info to print generic information on hash types supported
+- Added option --hash-info to show generic information for each hash-mode
+- Removed option --example-hashes, now is an alias of --hash-info
 
 ##
 ## Bugs
